KAF-528: Upgrade to Jackson 3
* Jackson 3 now has previous config disabled by default